# Entrega1CG

./: .gitignore  CMakeLists.txt  README.md
include/: KeyEvent.h  Object.h  Scene.h  Shader.h  Shape.h  stb_image.h
include/BasicShapes/: Cube.h  Floor.h
include/Scenes/: MainScene.h
shaders/: template.fs  template.vs
src/: Cube.cpp  Floor.cpp  KeyEvent.cpp  Main.cpp  MainScene.cpp  Scene.cpp
